[project]
name = "ferry-planner"
version = "0.1.0"
description = "BC Ferries sailing planner website server"
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "fastapi~=0.135.1",
    "httpx~=0.28.1",
    "jinja2~=3.1.5",
    "pydantic-settings~=2.13.1",
    "pydantic>=2.7.0,<3.0.0",
    "tzdata~=2026.2",
    "uvicorn[standard]~=0.42.0",
]

[dependency-groups]
dev = [
    "prek~=0.3.1",
    "ty~=0.0.2",
]

[build-system]
requires = ["uv_build>=0.11.8"]
build-backend = "uv_build"

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D1", "TD003"]
