[project]
name = "ferry-planner"
version = "0.1.0"
description = "BC Ferries sailing planner website server"
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "fastapi~=0.136.3",
    "httpx~=0.28.1",
    "jinja2~=3.1.5",
    "pydantic-settings~=2.14.2",
    "pydantic>=2.13.4,<3.0.0",
    "tzdata~=2026.2",
    "uvicorn[standard]~=0.48.0",
]

[dependency-groups]
dev = [
    "prek~=0.4.3",
]

[build-system]
requires = ["uv_build>=0.11.18"]
build-backend = "uv_build"

[tool.ruff]
src = ["src"]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D1", "TD003"]
